# CANCon

./: README.md
CANCon/: CMakeLists.txt  canSocket.h  main.cpp
build-CANCon-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/CANCon/: qmldir
